03.business-os/AICompanyManager/900.meta/axu_csv_r10_task_ledger_render_callsite_20260502_061152/100_patch.out
coreChanged=true
markerCount=1
file:///data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/axu_csv_r10_task_ledger_render_callsite_20260502_061152/100_axu_csv_r10_task_ledger_render_callsite.mjs:258
console.log('helperCount=' + String(countRegex(after, new RegExp('function\\\\s+' + helperName + '\\\\s*\\\\(', 'g'))));
                                                      ^

SyntaxError: Invalid regular expression: /function\\s+aicmAxuCsvR10RenderPmlwMajorRows\\s*\\(/g: Unterminated group
    at new RegExp (<anonymous>)
    at file:///data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/axu_csv_r10_task_ledger_render_callsite_20260502_061152/100_axu_csv_r10_task_ledger_render_callsite.mjs:258:55
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.14.1
